<resources>
    <string name="product_count_x">x</string>
    <string name="app_name">Ordenes</string>
    <string name="ok">OK</string>
    <string name="image">image</string>
    <string name="google_server_api_key">AIzaSyB061TxE72HOklgYEMmgNEJVES09Q4x5sc</string>
    <string name="delivering_to">Delivering to</string>
    <string name="mins">mins</string>
    <string name="minutes">minutes</string>
    <string name="min">Minimum Order</string>
    <string name="min_delivery_fee">Min Delivery Fee</string>
    <string name="busy">Busy</string>
    <string name="see_all">View All</string>
    <string name="featured_products">Popular Food</string>
    <string name="new_restaurants">New Restaurants</string>
    <string name="featured_restaurants">Featured Restaurants</string>
    <string name="deal_of_the_day">Deal of the day</string>
    <string name="browse_">Browse</string>
    <string name="browse">Browse or search</string>
    <string name="see_all_restaurant">See all restaurants</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hey">Hey,</string>
    <string name="good_morning">Good morning</string>
    <string name="good_afternoon">Good afternoon</string>
    <string name="good_evening">Good evening</string>
    <string name="top_picks">Top picks</string>
    <string name="best_offer">Best offer %</string>
    <string name="what_would_you_like_to_drink">What would you like to drinks?</string>
    <string name="within">within</string>
    <string name="search">Search</string>
    <string name="notorious_brands">Notorious Brands</string>
    <string name="there_is_no_search_item_found">There is no search item found!</string>
    <string name="choose_delivery_location">Choose delivery location</string>
    <string name="delivery_to_dif_loc_1">Delivery to different location</string>
    <string name="delivery_to_dif_loc_2">Choose location on the map</string>
    <string name="hey_there_1">Hey there!</string>
    <string name="hey_there_2">Login or create a account for</string>
    <string name="hey_there_3">a faster ordering experience.</string>
    <string name="log_in">Log in</string>
    <string name="process_failed_please_try_again">Process Failed, Please Try Again!</string>
    <string name="network_connection_not_available_please_try_again"><CENTER>Network Connection not available.\nPlease Try Again.</CENTER></string>
    <string name="there_is_no_network_connection">There is no network connection!</string>
    <string name="retry">Retry</string>
    <string name="closed">Closed</string>
    <string name="there_is_no_restaurant_available">There is no restaurant available!</string>
    <string name="loading_please_wait">Loading please wait...</string>
    <string name="search_restaurant_products">Search restaurant products</string>
    <string name="close">Close</string>
    <string name="view_basket">View Basket</string>
    <string name="search_in_store">Search in store</string>
    <string name="add_to_fav">Add to favourites</string>
    <string name="store_info">Store info</string>
    <string name="adds_and_more">Address and more</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="info">Info</string>
    <string name="reviews">Reviews</string>
    <string name="mins_">Mins</string>
    <string name="in">In</string>
    <string name="km">km</string>
    <string name="price_on_selection">Price on selection</string>
    <string name="the_menu_item_list_empty">The menu item list is empty!</string>
    <string name="there_is_no_item_found">There is no item found!</string>
    <string name="service_not_available_for_this_location">Service not available for this location.</string>
    <string name="filters">Filters</string>
    <string name="cuisines">Cuisines</string>
    <string name="popular_offers">Popular Offers</string>
    <string name="all_restaurant">All Restaurants</string>
    <string name="ar_delivery">Delivery -</string>
    <string name="ar_filter_clear_all">Clear all</string>
    <string name="ar_filter_apply">Apply</string>
    <string name="ar_filter_popular_filters">Popular filters</string>
    <string name="ar_filter_deals_and_offers">Deals and offers</string>
    <string name="ar_filter_pf_fast_delivery">Fast delivery</string>
    <string name="ar_filter_pf_free_delivery">Free delivery</string>
    <string name="ar_filter_pf_price_range">Price range</string>
    <string name="ar_filter_pf_top_rated">Top rated</string>
    <string name="ar_filter_pf_no_min_order">No minimum order</string>
    <string name="ar_filter_pf_no_newly_added">Newly added</string>
    <string name="ar_filter_do_free_delivery">Free delivery</string>
    <string name="ar_filter_do_open_outlets">Open outlets</string>
    <string name="ar_filter_do_online_payments">Online payments</string>
    <string name="ar_filter_do_offers_coupons">Offers/Coupons</string>
    <string name="ar_filter_do_sort_by">Sort by</string>
    <string name="ar_filter_do_a_z">A to Z</string>
    <string name="ar_filter_do_order_amount">Order amount</string>
    <string name="ar_filter_do_rating">Rating</string>
    <string name="ar_cuisines_search_hint">Search cuisines</string>
    <string name="ar_cuisines_search_lst_empty_msg">There is no cuisines.</string>
    <string name="ar_cuisines_selected">cuisines selected</string>
    <string name="sr_search_restaurants_hint">Search restaurants</string>
    <string name="sr_search_restaurants_lst_empty_msg">There is no restaurants.</string>
    <string name="dl_search_hint">Search for your address…</string>
    <string name="confirm_your_location">Confirm Your Location</string>
    <string name="address">Address</string>
    <string name="delivery_here">Delivery here</string>
    <string name="gps_enable_msg">You need to activate location service to use this feature. Please turn on network or GPS mode in location settings</string>
    <string name="setting">Setting</string>
    <string name="cancel">Cancel</string>
    <string name="please_allow_the_device_location_access">Please allow the device location access to proceed further.</string>
    <string name="please_select_your_address">Please select your address!</string>
    <string name="current_location">Current location</string>
    <string name="recent_searched_places">Recent Searched Places</string>
    <string name="login">Login</string>
    <string name="guest">Guest</string>
    <string name="forgot_password">Forgot password</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="forgot_password_btn">Forgot password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="please_enter_your_mobile_no">Please enter your mobile number.</string>
    <string name="please_enter_your_pwd">Please enter your password.</string>
    <string name="submit">Submit</string>
    <string name="You_not_a_exists_user">You must be a registered user to reset your password.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_otp">Please enter OTP.</string>
    <string name="otp_sent_to_your_mobile_number">The OTP sent to your mobile number</string>
    <string name="please_enter_correct_otp">Please enter correct OTP.</string>
    <string name="enter_4_digit">Enter the 6-digit code sent to you at </string>
    <string name="i_did_not_received_code_prefix">I did not receive a code(</string>
    <string name="i_did_not_received_code_postfix">)</string>
    <string name="resend">Resend</string>
    <string name="enter_you_new_pwd">Enter your new password</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="please_enter_the_confirm_pwd">Please enter the confirm password.</string>
    <string name="pwd_and_confirm_pwd_not_match">The password and confirm password does not match.</string>
    <string name="pwd_updated_success_fully">Password updated successfully.</string>
    <string name="logout">Logout</string>
    <string name="enter_you_details">Enter your details</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="please_enter_first_name">Please enter your first name.</string>
    <string name="please_enter_last_name">Please enter your last name.</string>
    <string name="please_enter_email">Please enter your email.</string>
    <string name="enter_valid_email_id">Enter valid email.</string>
    <string name="register_agreement">I have read and agree to the Terms and conditions</string>
    <string name="privacy_policy_agree"> Privacy Policy</string>
    <string name="terms_and_conditions_agree">Terms and conditions</string>
    <string name="and">and</string>
    <string name="please_agree_to_terms_and_conditions">Please agree to the terms and conditions.</string>
    <string name="You_already_exists_user">Your already a exists user.</string>
    <string name="set_delivery_location">Set delivery location</string>
    <string name="restaurant_area">Restaurant Area</string>
    <string name="opening_hours">Opening hours</string>
    <string name="minimum_order">Minimum order</string>
    <string name="pre_order">Pre-order</string>
    <string name="delivery_time">Delivery time</string>
    <string name="payment_options">Payment options</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="menu_option__choose">Choose</string>
    <string name="menu_option__items">items</string>
    <string name="menu_option__and">and</string>
    <string name="menu_option__choose_any_one_option">Choose any one option</string>
    <string name="please_select_required_options">Please select required options!</string>
    <string name="menu_option__choose_minimum">Choose minimum</string>
    <string name="menu_option__and_maximum">and maximum</string>
    <string name="menu_option__items_in">items in</string>
    <string name="is_currently">is currently</string>
    <string name="please_try_again_later">Please try again later!</string>
    <string name="add">Add</string>
    <string name="to_cart">to cart</string>
    <string name="delete">Delete</string>
    <string name="start">Start</string>
    <string name="agree">Agree</string>
    <string name="start_a_new_basket">Start a new basket</string>
    <string name="Basket">Basket</string>
    <string name="cl_cart_list_lst_empty_msg">Your basket is empty.</string>
    <string name="checkout">Checkout</string>
    <string name="add_items">Add items</string>
    <string name="payment_summary">Payment summary</string>
    <string name="do_you_want_remove_this_item">Do you want to remove this item?</string>
    <string name="remove">Remove</string>
    <string name="add_coupon_code">Add Coupon</string>
    <string name="coupon">Coupon</string>
    <string name="apply">Apply</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="please_enter_the_coupon_code">Please enter the coupon code.</string>
    <string name="additional_request">Additional request</string>
    <string name="add_a_note">Add a note</string>
    <string name="enter_your_note">Your note</string>
    <string name="cl_clear">Clear</string>
    <string name="please_login_to_proceed_further">Please login to proceed further.</string>
    <string name="co_get_code">Get code</string>
    <string name="my_orders">My Orders</string>
    <string name="co_verify_mobile_no">Verify mobile number</string>
    <string name="co_send_sms_msg">We will send you on SMS with the verification \n code on the number above.</string>
    <string name="co_change">Change</string>
    <string name="my_favourites">My Favourites</string>
    <string name="reason_for_cancel">Reason for cancellation</string>
    <string name="your_comment">Your comment</string>
</resources>