<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_primay_color_24dp"
        android:title="@string/app_name" />

    <item
        android:id="@+id/navigation_favourites"
        android:icon="@drawable/baseline_favorite_primary_color_24dp"
        android:title="@string/my_favourites" />

    <item
        android:id="@+id/navigation_my_orders"
        android:icon="@drawable/baseline_shopping_basket_primary_color_24dp"
        android:title="@string/my_orders" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/baseline_person_primary_color_24dp"
        android:title="@string/app_name" />

</menu>
