<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_network_analyser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100_transparent_50"
    android:orientation="vertical"
    tools:context=".CustomClasses.NetworkAnalyser">

    <!--grey_100_transparent_50-->

    <!-- <TextView
         android:id="@+id/tv_network_analyser_no_network_app_bar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_42sdp"
         android:layout_gravity="top"
         android:gravity="center"
         android:background="@color/colorPrimary"
         android:padding="@dimen/_4sdp"
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:textSize="@dimen/_18sdp"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_gravity="top"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_4sdp">

        <ImageView
            android:id="@+id/img_app_bar_app_logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/logo_white_bg_transparent_1"
            android:padding="@dimen/_1sdp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_network_analyser_no_network_status_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/_82sdp"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/network_connection_not_available_please_try_again"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />

    <LinearLayout
        android:id="@+id/layout_network_analyser_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_22sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_network_analyser_no_network_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/image"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_speaker_phone_color_primary_48dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_network_analyser_no_network_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center"
            android:padding="@dimen/_8sdp"
            android:text="@string/there_is_no_network_connection"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_network_analyser_retry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginLeft="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginRight="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:background="@drawable/bg_network_analyser_btn"
        android:gravity="center"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />

</FrameLayout>
