<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DialogueGuestMobileNoVerify">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_marginRight="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:fontFamily="@font/poppins_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/co_verify_mobile_no"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_gravity="center"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/ar_filter_title_text_color"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_27sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_gm_nv_mobile_no"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:textColor="@color/ar_filter_title_text_color"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/tv_gm_nv_mobile_no_change"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="end"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:text="@string/co_change"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>


            <TextView
                android:fontFamily="@font/poppins_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/co_send_sms_msg"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/_10sdp"
                android:textColor="@color/ar_filter_title_text_color"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_27sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_gm_nv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/bg_btn_color_primary"
                    android:layout_gravity="start"
                    android:gravity="center"
                    android:textAllCaps="false"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp" />

                <Button
                    android:id="@+id/btn_gm_nv_get_code"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_gravity="end"
                    android:textAllCaps="false"
                    android:background="@drawable/bg_btn_color_primary"
                    android:gravity="center"
                    android:text="@string/co_get_code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp" />

            </LinearLayout>


        </LinearLayout>



</RelativeLayout>