<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lay_log_bs_login_btn_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginRight="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/bg_new_req_btn_color_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login"
            android:textColor="@color/req_new_cart_checkout_btn_color"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_log_bs_guest_btn_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginRight="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_new_req_btn_color_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/guest"
            android:textColor="@color/req_new_cart_checkout_btn_color"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_log_bs_cancel_btn_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginRight="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_new_req_btn_color_border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/cancel"
            android:textColor="@color/req_new_cart_checkout_btn_color"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />




    </LinearLayout>




</LinearLayout>